# detection_and_pcl

./: CMakeLists.rtf  README.md  correspondence_grouping.cpp  image_converter.py  implicit_shape_model.cpp
PCL/: CMakeLists.txt  README  package.xml
PCL/src/: example.cpp
detection/: CMakeLists.txt  image_converter.py  package.xml
detection/src/: QRdetect  camShift.py  image_converter.py  test.py
